--- a/style.css
+++ b/style.css
@@ -1,7 +1,85 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  font-size: 10px;
+    font-size: 12px;
+}
+
+body {
+    width: 100vw;
+    min-height: 100vh;
+    margin: 0;
+    background-color: cadetblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+    background-color: white;
+    color: black;
+    padding: 1rem;
+    width: fit-content;
+    height: fit-content;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    border: 0.5rem solid black;
+    width: 100vmin;
+    max-width: 600px;
+    height: 100vmin;
+    max-height: 600px;
+}
+
+.grid-items {
+    border: 0.25rem solid gray;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.prompt {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.answer {
+    border: none;
+    font-size: 2rem;
+    width: 50%;
+    height: 50%;
+    text-align: center;
+}
+
+#box3,
+#box7,
+#box10,
+#box11,
+#box12,
+#box15 {
+    border-left: 0.5rem solid black;
+}
+
+#box1,
+#box2,
+#box3,
+#box4,
+#box5,
+#box8,
+#box9,
+#box10,
+#box11 {
+    border-bottom: 0.5rem solid black;
+}
+
+@media only screen and (min-width) {
+    html {
+        font-size: 16px;
+    }
 }
